--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "less-loader": "^5.0.0",
     "mint-ui": "^2.2.13",
+    "vant": "^2.0.3",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.4",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1"
   },
